--- a/index.html
+++ b/index.html
@@ -897,34 +897,35 @@
             }
 
             .profile-container {
-                width: 100px;
-                height: 100px;
+                width: 120px;
+                height: 120px;
                 top: 50%;
-                left: 15px;
-                transform: translateY(-50%);
+                left: 50%;
+                transform: translate(-50%, -50%);
                 pointer-events: auto !important;
                 z-index: 10;
                 position: absolute;
             }
 
             .profile-picture {
-                width: 100px;
-                height: 100px;
+                width: 120px;
+                height: 120px;
                 pointer-events: auto !important;
                 z-index: 10;
                 position: relative;
             }
 
             .profile-info {
-                align-items: flex-start;
-                text-align: left;
+                align-items: center;
+                text-align: center;
                 flex: 1;
                 display: flex;
                 flex-direction: column;
-                justify-content: space-between;
+                justify-content: flex-end;
                 height: 100%;
-                padding-left: 130px; /* Space for profile picture */
+                padding-top: 130px; /* Space for centered profile picture */
                 box-sizing: border-box;
+                position: relative;
             }
 
             .name-and-badges {
@@ -940,6 +941,7 @@
                 letter-spacing: 1px;
                 text-align: left;
                 flex: 1;
+                align-self: flex-start;
             }
 
             .badge-group {
