--- a/index.html
+++ b/index.html
@@ -897,33 +897,34 @@
             }
 
             .profile-container {
-                width: 120px;
-                height: 120px;
+                width: 110px;
+                height: 110px;
                 top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
+                left: 10px;
+                transform: translateY(-50%);
                 pointer-events: auto !important;
                 z-index: 10;
                 position: absolute;
             }
 
             .profile-picture {
-                width: 120px;
-                height: 120px;
+                width: 110px;
+                height: 110px;
                 pointer-events: auto !important;
                 z-index: 10;
                 position: relative;
             }
 
             .profile-info {
-                align-items: center;
-                text-align: center;
+                align-items: flex-start;
+                text-align: left;
                 flex: 1;
                 display: flex;
                 flex-direction: column;
-                justify-content: flex-end;
+                justify-content: flex-start;
                 height: 100%;
-                padding-top: 130px; /* Space for centered profile picture */
+                padding-left: 130px; /* Space for profile picture */
+                padding-top: 10px;
                 box-sizing: border-box;
                 position: relative;
             }
@@ -968,9 +969,7 @@
                 display: flex;
                 justify-content: flex-end;
                 padding-right: 0px;
-                position: absolute;
-                top: 0;
-                right: 0;
+                position: relative;
             }
 
             .server-badge-box {
@@ -990,12 +989,12 @@
             #profile-bio {
                 font-size: 14px;
                 line-height: 1.4;
-                margin-top: 4px;
+                margin-top: 2px;
                 margin-bottom: 0px;
             }
 
             .bio-separator {
-                margin: 2px 0;
+                margin: 0px 0;
                 height: 1px;
             }
 
