--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@
                 width: 100%;
                 max-width: 100%;
                 padding: 12px;
-                margin: -20px 0 0 0;
+                margin: -2px 0 0 0;
             }
 
             /* Center the overall content vertically/horizontally */
@@ -903,7 +903,7 @@
                 left: 10px;
                 transform: translateY(-50%);
                 pointer-events: auto !important;
-                z-index: 10;
+                z-index: 15;
                 position: absolute;
             }
 
@@ -911,8 +911,9 @@
                 width: 110px;
                 height: 110px;
                 pointer-events: auto !important;
-                z-index: 10;
+                z-index: 15;
                 position: relative;
+                cursor: pointer !important;
             }
 
             .profile-info {
@@ -923,8 +924,8 @@
                 flex-direction: column;
                 justify-content: flex-start;
                 height: 100%;
-                padding-left: 130px; /* Space for profile picture */
-                padding-top: 10px;
+                padding-left: 135px; /* Space for profile picture */
+                padding-top: 5px;
                 box-sizing: border-box;
                 position: relative;
             }
@@ -935,6 +936,7 @@
                 justify-content: space-between;
                 gap: 8px;
                 width: 100%;
+                position: relative;
             }
 
             #profile-name {
@@ -943,6 +945,9 @@
                 text-align: left;
                 flex: 1;
                 align-self: flex-start;
+                min-width: 120px;
+                max-width: 150px;
+                overflow: hidden;
             }
 
             .badge-group {
@@ -969,7 +974,9 @@
                 display: flex;
                 justify-content: flex-end;
                 padding-right: 0px;
-                position: relative;
+                position: absolute;
+                top: 0;
+                right: 0;
             }
 
             .server-badge-box {
