--- a/index.html
+++ b/index.html
@@ -922,31 +922,33 @@
                 flex: 1;
                 display: flex;
                 flex-direction: column;
-                justify-content: flex-start;
+                justify-content: space-between;
                 height: 100%;
-                padding-left: 135px; /* Space for profile picture */
+                padding-left: 130px; /* Space for profile picture */
                 padding-top: 5px;
+                padding-bottom: 5px;
                 box-sizing: border-box;
                 position: relative;
             }
 
             .name-and-badges {
-                flex-direction: row;
+                flex-direction: column;
                 align-items: flex-start;
-                justify-content: space-between;
+                justify-content: flex-start;
                 gap: 8px;
                 width: 100%;
                 position: relative;
+                flex: 1;
             }
 
             #profile-name {
                 font-size: 20px;
                 letter-spacing: 1px;
                 text-align: left;
-                flex: 1;
+                flex: none;
                 align-self: flex-start;
-                min-width: 120px;
-                max-width: 150px;
+                min-width: auto;
+                max-width: 200px;
                 overflow: hidden;
             }
 
@@ -954,6 +956,11 @@
                 justify-content: flex-end;
                 gap: 6px;
                 flex-shrink: 0;
+                flex-wrap: wrap;
+                max-width: 100%;
+                padding: 0 10px;
+                box-sizing: border-box;
+                margin-top: auto;
             }
 
             .badge {
@@ -969,14 +976,13 @@
             }
 
             .server-badge-container {
-                margin-top: 0px;
+                margin-top: 4px;
                 margin-bottom: 0px;
                 display: flex;
                 justify-content: flex-end;
-                padding-right: 0px;
-                position: absolute;
-                top: 0;
-                right: 0;
+                padding-right: 10px;
+                position: relative;
+                width: 100%;
             }
 
             .server-badge-box {
