--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
                 position: fixed;
                 z-index: 20;
                 left: 50%;
-                transform: translateX(-50%);
+                transform: translateX(-50%) scale(0.9);
                 top: calc(env(safe-area-inset-top) + 12px);
                 bottom: calc(env(safe-area-inset-bottom) + 12px);
                 width: min(94vw, 520px);
@@ -841,6 +841,7 @@
                 overscroll-behavior: contain;
                 box-sizing: border-box;
                 scrollbar-gutter: stable;
+                transform-origin: center center;
             }
 
             /* Skills block lives inside profile-block; keep it full-width of parent */
