--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
                 transform: translateX(-50%) scale(0.9);
                 top: calc(env(safe-area-inset-top) + 12px);
                 bottom: calc(env(safe-area-inset-bottom) + 12px);
-                width: min(94vw, 520px);
+                width: min(98vw, 520px);
                 min-height: 240px;
                 padding: 12px 12px 20px; /* extra bottom padding to avoid overlap with ip box */
                 max-height: calc(100dvh - env(safe-area-inset-top) - env(safe-area-inset-bottom) - 24px);
@@ -849,7 +849,7 @@
                 width: 100%;
                 max-width: 100%;
                 padding: 12px;
-                margin: -2px 0 0 0;
+                margin: -15px 0 0 0;
             }
 
             /* Center the overall content vertically/horizontally */
@@ -918,14 +918,14 @@
             }
 
             .profile-info {
-                align-items: flex-start;
-                text-align: left;
+                align-items: center;
+                text-align: center;
                 flex: 1;
                 display: flex;
                 flex-direction: column;
-                justify-content: space-between;
+                justify-content: flex-start;
                 height: 100%;
-                padding-left: 130px; /* Space for profile picture */
+                padding-left: 0px;
                 padding-top: 5px;
                 padding-bottom: 5px;
                 box-sizing: border-box;
@@ -934,7 +934,7 @@
 
             .name-and-badges {
                 flex-direction: column;
-                align-items: flex-start;
+                align-items: center;
                 justify-content: flex-start;
                 gap: 8px;
                 width: 100%;
@@ -945,12 +945,13 @@
             #profile-name {
                 font-size: 20px;
                 letter-spacing: 1px;
-                text-align: left;
+                text-align: center;
                 flex: none;
-                align-self: flex-start;
+                align-self: center;
                 min-width: auto;
-                max-width: 200px;
+                max-width: 90%;
                 overflow: hidden;
+                margin-bottom: 5px;
             }
 
             .badge-group {
@@ -961,7 +962,9 @@
                 max-width: 100%;
                 padding: 0 10px;
                 box-sizing: border-box;
-                margin-top: auto;
+                position: absolute;
+                top: 5px;
+                right: 10px;
             }
 
             .badge {
@@ -977,13 +980,15 @@
             }
 
             .server-badge-container {
-                margin-top: 4px;
+                margin-top: 0px;
                 margin-bottom: 0px;
                 display: flex;
                 justify-content: flex-end;
-                padding-right: 10px;
-                position: relative;
-                width: 100%;
+                padding-right: 0px;
+                position: absolute;
+                top: 5px;
+                right: 10px;
+                width: auto;
             }
 
             .server-badge-box {
@@ -1010,6 +1015,21 @@
             .bio-separator {
                 margin: 0px 0;
                 height: 1px;
+            }
+
+            .profile-quote {
+                align-self: flex-start;
+                margin: -8px 0 0 15px;
+                color: rgba(255, 255, 255, 0.8);
+                font-size: 14px;
+                background: rgba(0, 0, 0, 0.25);
+                padding: 3px 8px;
+                border-radius: 10px;
+                border: 1px solid rgba(255, 255, 255, 0.1);
+                backdrop-filter: blur(5px);
+                text-align: center;
+                position: relative;
+                z-index: 5;
             }
 
             .social-links {
