--- a/index.html
+++ b/index.html
@@ -1276,7 +1276,7 @@
                     <a id="xrp-link" href="https://xrpscan.com/account/rpbsDqk7JTVu8ddG9XWf52pMjR3xDAKsju" target="_blank" title="My XRP Wallet">
                         <img src="assets/xrp.png" alt="XRP Wallet" class="social-icon">
                     </a>
-                    <a href="discord://-/users/1232545312233619462" target="_blank" title="Add me on Discord">
+                    <a id="discord-link" href="discord://-/users/1232545312233619462" target="_blank" title="Add me on Discord">
                         <img src="assets/discord.png" alt="Discord" class="social-icon">
                     </a>
                     <a href="https://x.com/comms_____up" target="_blank" title="Follow me on X/Twitter">
