--- a/index.html
+++ b/index.html
@@ -1186,28 +1186,17 @@
 
                                     </div>
                                     <div class="badge-container">
-                                        <img src="assets/active_developer.png" alt="Active Developer" class="badge">
-
-                                    </div>
-                                    <div class="badge-container">
                                         <img src="assets/templar-cross.png" alt="Templar Cross" class="badge">
 
                                     </div>
                                     <div class="badge-container">
-                                        <img src="assets/quests.png" alt="Quests" class="badge">
+                                        <img src="assets/glock-spin.gif" alt="Glock Spin" class="badge">
 
                                     </div>
                                     <div class="badge-container">
-                                        <img src="assets/Nighty.png" alt="Nighty" class="badge">
+                                        <img src="assets/Nighty.gif" alt="Nighty" class="badge">
 
                                     </div>
-                                    <div class="badge-container">
-                                        <img src="assets/discord-golden-bug-hunter-.png" alt="Golden Bug Hunter" class="badge">
-
-                                    </div>
-                                    <div class="badge-container">
-<img src="assets/g59.png" alt="$B$" class="badge">
- </div>
                                 </div>
                             </div>
                         </div>
