--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
         #profile-block {
             position: fixed;
-            top: 50%;
+            top: 55.5%;
             left: 50%;
             transform: translate(-50%, -50%);
             width: 820px;
@@ -1002,6 +1002,7 @@
             justify-content: center;
             align-items: flex-start;
             min-height: 100vh;
+            position: relative;
         }
 
         #site-scale {
@@ -2035,11 +2036,10 @@
     <div class="glitch-overlay"></div>
     <div id="hacker-overlay" class="hidden"></div>
     <div id="snow-overlay" class="hidden"></div>
+    <div class="custom-cursor"></div>
 
     <div id="site-scale-wrapper">
         <div id="site-scale">
-            <div class="custom-cursor"></div>
-
             <div id="start-screen">
                 <div id="start-text"> Hi Monkey :P</div>
             </div>
@@ -2242,21 +2242,24 @@
                         <input id="transparency-slider" hidden>
                     </div>
                 </div>
-                <div id="ip-box">Grab IP Failed, Nice one!</div>
             </div>
+        </div>
+    </div>
 
-            <audio id="background-music" loop>
+    <audio id="background-music" loop>
         <source id="bgmSource" src="" type="audio/mp4">
     </audio>
 
-            <audio id="admin-sound" preload="auto">
+    <audio id="admin-sound" preload="auto">
         <source src="https://www.myinstants.com/media/sounds/windows-10-exclamation.mp3" type="audio/mpeg">
     </audio>
 
+    <div id="ip-box">Grab IP Failed, Nice one!</div>
 
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 
-            <script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+
+    <script>
         const userId = '1232545312233619462';
         let name = "Syn";
 
@@ -3064,9 +3067,6 @@
             }
         }
     </script>
-
-        </div>
-    </div>
 
     <script src="random-bg.js"></script>
     <script src="script.js"></script>
