--- a/index.html
+++ b/index.html
@@ -406,6 +406,57 @@
             margin-right: 0;
             display: block;
         }
+
+        .thought-bubble {
+            position: absolute;
+            top: -20px;
+            right: -30px;
+            background: rgba(255, 255, 255, 0.9);
+            border-radius: 20px;
+            padding: 12px 16px;
+            max-width: 200px;
+            opacity: 0;
+            transform: scale(0.8);
+            transition: all 0.3s ease;
+            pointer-events: none;
+            z-index: 10;
+        }
+
+        .thought-bubble::before {
+            content: '';
+            position: absolute;
+            bottom: -8px;
+            left: 20px;
+            width: 16px;
+            height: 16px;
+            background: rgba(255, 255, 255, 0.9);
+            border-radius: 50%;
+        }
+
+        .thought-bubble::after {
+            content: '';
+            position: absolute;
+            bottom: -16px;
+            left: 10px;
+            width: 8px;
+            height: 8px;
+            background: rgba(255, 255, 255, 0.9);
+            border-radius: 50%;
+        }
+
+        .thought-bubble-text {
+            color: #000;
+            font-size: 14px;
+            font-weight: 600;
+            text-align: center;
+            font-family: 'Courier New', monospace;
+            line-height: 1.3;
+        }
+
+        .profile-container:hover .thought-bubble {
+            opacity: 1;
+            transform: scale(1);
+        }
         
         .profile-status {
             display: flex;
@@ -2056,6 +2107,9 @@
                             <div class="profile-left-column">
                                 <div class="profile-container">
                                     <img src="" alt="Profile" class="profile-picture">
+                                    <div class="thought-bubble">
+                                        <div class="thought-bubble-text">Its 2026 Nigga, Lock In</div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="profile-right-column">
