--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
     <meta name="twitter:title" content="Better Than Your Biolink">
     <meta name="twitter:description" content="Fuck your shitty Biolink">
     <meta name="twitter:image" content="https://0xpsychosecurity.github.io/assets/banner-photo-embed.gif">
+    
+    <!-- Security Headers -->
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="X-Frame-Options" content="DENY">
+    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+    <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
     <style>
         * {
             margin: 0;
