--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
     <!-- fuck off skid - this source is mine -->
     <meta property="og:type" content="website">
     <!-- nice try retard - you can't have my code -->
-    <meta property="og:title" content="Better Than Your Biolink">
+    <meta property="og:title" content="Fuck Your Guns.lol"
     <!-- aww almost - thought you could scrape this? -->
-    <meta property="og:description" content="👌👌👌👌👌👌👌👌">
+    <meta property="og:description" content="★★★★☆">
     <!-- shitty ai tool - go find another site to bother -->
     <meta property="og:url" content="https://0xpsychosecurity.github.io/">
     <meta property="og:image" content="https://0xpsychosecurity.github.io/assets/banner-photo-embed.gif">
@@ -116,8 +116,8 @@
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Better Than Your Biolink">
-    <meta name="twitter:description" content="Fuck your shitty Biolink">
+    <meta name="twitter:title" content="Fuck Your Guns.lol">
+    <meta name="twitter:description" content="★★★★☆">
     <meta name="twitter:image" content="https://0xpsychosecurity.github.io/assets/banner-photo-embed.gif">
     
     <!-- Security Headers -->
