--- a/index.html
+++ b/index.html
@@ -2579,6 +2579,7 @@
                             hasNitro = true;
                         }
                         
+                        if (hasNitro) {
                             badgesToAdd.push({ name: 'Discord Nitro', icon: 'assets/discord_nitro.png' });
                         }
                         
