--- a/mobile.html
+++ b/mobile.html
@@ -25,14 +25,20 @@
         }
 
         body {
-            background-color: #000;
+            background: linear-gradient(135deg, #0a0a0a, #1a1a1a);
             color: #fff;
-            font-family: 'Share Tech Mono', monospace;
-            overflow-x: hidden;
+            font-family: 'Retro Gaming', monospace;
+            overflow: hidden;
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            touch-action: none;
+            -webkit-overflow-scrolling: touch;
             margin: 0;
             padding: 0;
-            min-height: 100vh;
-            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         body::before {
