--- a/mobile.html
+++ b/mobile.html
@@ -1256,13 +1256,29 @@
 
         }
 
-    </style></head><body><div id="start-screen" onclick="this.classList.add('hidden'); document.getElementById('background').style.display='block'; document.getElementById('profile-block').style.opacity='1';"><div id="start-text">&#70;&#117;&#99;&#107; &#89;&#111;&#117;&#44; &#80;&#97;&#121; &#77;&#101; &#88;&#82;&#80;&#95;</div></div><video id="background" playsinline="" webkit-playsinline=""><source id="bgSource" type="video/mp4"></video><div class="glitch-overlay"></div><div id="site-scale-wrapper"><div class="container"><div id="site-scale"><div id="profile-block"><div class="profile-header"><div class="profile-layout"><div class="profile-left-column"><div class="profile-container"><img src="" alt="Profile" class="profile-picture"><div class="thought-bubble"><div class="thought-bubble-text">&#73;&#116;&#115; &#50;&#48;&#50;&#54; &#78;&#105;&#103;&#103;&#97;&#44; &#76;&#111;&#99;&#107; &#73;&#110;</div></div></div></div><div class="profile-right-column"><div class="profile-right-item"><div id="profile-name"></div></div><div class="profile-right-item"><div id="clan-tag" class="server-badge-box hidden"><img id="clan-badge" src="" alt="Clan Badge" class="server-badge-image hidden"><span id="clan-text" class="server-badge-text">&#76;&#69;&#88;</span></div></div><div class="profile-right-item"><div id="profile-status" class="profile-status"><div class="status-dot"></div><div class="status-text">&#76;&#111;&#97;&#100;&#105;&#110;&#103;&#46;&#46;&#46;</div></div></div><div class="profile-right-item badge-stack"><div class="badge-box"><div class="badge-box-inner"><div class="badge-group"><div class="badgevault-badges-row"></div><div class="discord-badges-row"></div></div></div></div></div></div></div></div><div id="skills-block"><h2 class="skills-title">&#76;&#97;&#110;&#103;&#117;&#97;&#103;&#101;&#115;</h2><div class="skill"><div class="skill-name"><img src="16dh80a2nlj9/ul8rxb7yjwis/GCodeblk1.png" alt="G-Code (CNC Code)" class="skill-icon"><span>&#71;&#45;&#67;&#111;&#100;&#101; &#40;&#67;&#78;&#67; &#67;&#111;&#100;&#101;&#41;</span><span>&#49;&#48;&#48;&#37;</span></div><div class="skill-bar-container"><div id="gcode-bar" class="skill-bar"></div></div></div><div class="skill"><div class="skill-name"><img src="16dh80a2nlj9/ul8rxb7yjwis/prolog.png" alt="Prolog" class="skill-icon"><span>&#80;&#114;&#111;&#108;&#111;&#103;</span><span>&#54;&#51;&#37;</span></div><div class="skill-bar-container"><div id="prolog-bar" class="skill-bar"></div></div></div><div class="skill"><div class="skill-name"><img src="16dh80a2nlj9/ul8rxb7yjwis/cpp.png" alt="C++" class="skill-icon"><span>&#67;&#43;&#43;</span><span>&#50;&#55;&#37;</span></div><div class="skill-bar-container"><div id="seeplusplus-bar" class="skill-bar"></div></div></div><div class="skill"><div class="skill-name"><img src="16dh80a2nlj9/ul8rxb7yjwis/assembly.png" alt="Assembly" class="skill-icon"><span>&#65;&#115;&#115;&#101;&#109;&#98;&#108;&#121;</span><span>&#49;&#50;&#37;</span></div><div class="skill-bar-container"><div id="assembly-bar" class="skill-bar"></div></div></div></div><div class="social-links"><a href="https://signal.me/#eu/6kk1-aRZK4pmYLidTkVUUMAjfwsp0l4To2dYqRr_8yXpsD2Dsp1H7K0fSwINVWfT" target="_blank" title="Message Me on Signal"><img src="16dh80a2nlj9/ul8rxb7yjwis/signal.png" alt="Signal" class="social-icon"></a><a id="xrp-link" href="https://xrpscan.com/account/rpbsDqk7JTVu8ddG9XWf52pMjR3xDAKsju" target="_blank" title="My XRP Wallet"><img src="16dh80a2nlj9/ul8rxb7yjwis/xrp.png" alt="XRP Wallet" class="social-icon"></a><a id="discord-link" href="https://discord.com/users/1232545312233619462" target="_blank" title="Add me on Discord"><img src="16dh80a2nlj9/ul8rxb7yjwis/discord.png" alt="Discord" class="social-icon"></a><a href="https://x.com/comms_____up" target="_blank" title="Follow me on X/Twitter"><img src="16dh80a2nlj9/ul8rxb7yjwis/twitter.png" alt="Twitter" class="social-icon"></a><a href="mailto:living_that@racist.life" target="_blank" title="Email Me" onclick="copyEmail(); return true;"><img src="16dh80a2nlj9/ul8rxb7yjwis/whor.email.png" alt="Email" class="social-icon"></a><a href="https://zws.im/%F3%A0%81%BA%F3%A0%81%B1%F3%A0%81%A3%F3%A0%81%B2%F3%A0%81%BA%F3%A0%81%BA%F3%A0%81%A2" target="_blank" title="My Leaked Dox"><img src="16dh80a2nlj9/ul8rxb7yjwis/doxbin.png" alt="My Dox" class="social-icon"></a><a href="https://odysee.com/@cumfart:3?view=content" target="_blank" title="My Odysee Channel"><img src="16dh80a2nlj9/ul8rxb7yjwis/odysee.png" alt="Odysee" class="social-icon"></a><a href="#" onclick="copyPGPKey()" title="Copy PGP Public Key"><img src="16dh80a2nlj9/ul8rxb7yjwis/PGP.png" alt="PGP" class="social-icon"></a><a href="#" onclick="copyEmail()" title="Copy Email"><img src="16dh80a2nlj9/ul8rxb7yjwis/email.png" alt="Email" class="social-icon"></a></div><div class="visitor-counter"><svg class="visitor-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path></svg><span id="visitor-count"></span></div></div></div></div></div><script data-protected-src="c2oubmltLnBhc2cvMi4yMS4zL3Bhc2cvc2JpbC94YWphL21vYy5lcmFsZmR1b2xjLnNqbmRjLy86c3B0dGg="></script><script data-protected-src="c2oudHBpcmNz"></script><script>
+    </style></head><body><div id="start-screen" onclick="this.classList.add('hidden'); document.getElementById('background').style.display='block'; document.getElementById('profile-block').style.opacity='1';"><div id="start-text">&#70;&#117;&#99;&#107; &#89;&#111;&#117;&#44; &#80;&#97;&#121; &#77;&#101; &#88;&#82;&#80;&#95;</div></div><video id="background" playsinline="" webkit-playsinline=""><source id="bgSource" type="video/mp4"></video><div class="glitch-overlay"></div><div id="site-scale-wrapper"><div class="container"><div id="site-scale"><div id="profile-block"><div class="profile-header"><div class="profile-layout"><div class="profile-left-column"><div class="profile-container"><img src="" alt="Profile" class="profile-picture"><div class="thought-bubble"><div class="thought-bubble-text">&#73;&#116;&#115; &#50;&#48;&#50;&#54; &#78;&#105;&#103;&#103;&#97;&#44; &#76;&#111;&#99;&#107; &#73;&#110;</div></div></div></div><div class="profile-right-column"><div class="profile-right-item"><div id="profile-name"></div></div><div class="profile-right-item"><div id="clan-tag" class="server-badge-box hidden"><img id="clan-badge" src="" alt="Clan Badge" class="server-badge-image hidden"><span id="clan-text" class="server-badge-text">&#76;&#69;&#88;</span></div></div><div class="profile-right-item"><div id="profile-status" class="profile-status"><div class="status-dot"></div><div class="status-text">&#76;&#111;&#97;&#100;&#105;&#110;&#103;&#46;&#46;&#46;</div></div></div><div class="profile-right-item badge-stack"><div class="badge-box"><div class="badge-box-inner"><div class="badge-group"><div class="badgevault-badges-row"></div><div class="discord-badges-row"></div></div></div></div></div></div></div></div><div id="skills-block"><h2 class="skills-title">&#76;&#97;&#110;&#103;&#117;&#97;&#103;&#101;&#115;</h2><div class="skill"><div class="skill-name"><img src="16dh80a2nlj9/ul8rxb7yjwis/GCodeblk1.png" alt="G-Code (CNC Code)" class="skill-icon"><span>&#71;&#45;&#67;&#111;&#100;&#101; &#40;&#67;&#78;&#67; &#67;&#111;&#100;&#101;&#41;</span><span>&#49;&#48;&#48;&#37;</span></div><div class="skill-bar-container"><div id="gcode-bar" class="skill-bar"></div></div></div><div class="skill"><div class="skill-name"><img src="16dh80a2nlj9/ul8rxb7yjwis/prolog.png" alt="Prolog" class="skill-icon"><span>&#80;&#114;&#111;&#108;&#111;&#103;</span><span>&#54;&#51;&#37;</span></div><div class="skill-bar-container"><div id="prolog-bar" class="skill-bar"></div></div></div><div class="skill"><div class="skill-name"><img src="16dh80a2nlj9/ul8rxb7yjwis/cpp.png" alt="C++" class="skill-icon"><span>&#67;&#43;&#43;</span><span>&#50;&#55;&#37;</span></div><div class="skill-bar-container"><div id="seeplusplus-bar" class="skill-bar"></div></div></div><div class="skill"><div class="skill-name"><img src="16dh80a2nlj9/ul8rxb7yjwis/assembly.png" alt="Assembly" class="skill-icon"><span>&#65;&#115;&#115;&#101;&#109;&#98;&#108;&#121;</span><span>&#49;&#50;&#37;</span></div><div class="skill-bar-container"><div id="assembly-bar" class="skill-bar"></div></div></div></div><div class="social-links"><a href="https://signal.me/#eu/6kk1-aRZK4pmYLidTkVUUMAjfwsp0l4To2dYqRr_8yXpsD2Dsp1H7K0fSwINVWfT" target="_blank" title="Message Me on Signal"><img src="16dh80a2nlj9/ul8rxb7yjwis/signal.png" alt="Signal" class="social-icon"></a><a id="xmr-link" href="#" onclick="copyXMRAddress(); return false;" title="My XMR Wallet"><img src="16dh80a2nlj9/ul8rxb7yjwis/xmr.png" alt="XMR Wallet" class="social-icon"></a><a id="discord-link" href="https://discord.com/users/1232545312233619462" target="_blank" title="Add me on Discord"><img src="16dh80a2nlj9/ul8rxb7yjwis/discord.png" alt="Discord" class="social-icon"></a><a href="https://x.com/comms_____up" target="_blank" title="Follow me on X/Twitter"><img src="16dh80a2nlj9/ul8rxb7yjwis/twitter.png" alt="Twitter" class="social-icon"></a><a href="mailto:living_that@racist.life" target="_blank" title="Email Me" onclick="copyEmail(); return true;"><img src="16dh80a2nlj9/ul8rxb7yjwis/whor.email.png" alt="Email" class="social-icon"></a><a href="https://zws.im/%F3%A0%81%BA%F3%A0%81%B1%F3%A0%81%A3%F3%A0%81%B2%F3%A0%81%BA%F3%A0%81%BA%F3%A0%81%A2" target="_blank" title="My Leaked Dox"><img src="16dh80a2nlj9/ul8rxb7yjwis/doxbin.png" alt="My Dox" class="social-icon"></a><a href="https://odysee.com/@cumfart:3?view=content" target="_blank" title="My Odysee Channel"><img src="16dh80a2nlj9/ul8rxb7yjwis/odysee.png" alt="Odysee" class="social-icon"></a><a href="#" onclick="copyPGPKey()" title="Copy PGP Public Key"><img src="16dh80a2nlj9/ul8rxb7yjwis/PGP.png" alt="PGP" class="social-icon"></a><a href="#" onclick="copyEmail()" title="Copy Email"><img src="16dh80a2nlj9/ul8rxb7yjwis/email.png" alt="Email" class="social-icon"></a></div><div class="visitor-counter"><svg class="visitor-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path></svg><span id="visitor-count"></span></div></div></div></div></div><script data-protected-src="c2oubmltLnBhc2cvMi4yMS4zL3Bhc2cvc2JpbC94YWphL21vYy5lcmFsZmR1b2xjLnNqbmRjLy86c3B0dGg="></script><script data-protected-src="c2oudHBpcmNz"></script><script>
 
         let userInteracted = false;
 
         let bgVideo;
 
 
+
+        function copyXMRAddress() {
+            const xmrAddress = '8ApkojkdVCoA88VTQxLsgRM2GwTxUw5hbYYPSLv253Xr8ikAiAssxhrZfr3557u4kL2EnS1NuegRvhs8jHWPfMSQJpddQzs';
+            navigator.clipboard.writeText(xmrAddress).then(() => {
+                alert('Address Copied');
+            }).catch(err => {
+                console.error('Failed to copy XMR address:', err);
+                const textArea = document.createElement('textarea');
+                textArea.value = xmrAddress;
+                document.body.appendChild(textArea);
+                textArea.select();
+                document.execCommand('copy');
+                document.body.removeChild(textArea);
+                alert('Address Copied');
+            });
+        }
 
         function copyEmail() {
 
@@ -1642,7 +1658,7 @@
 
                 // Typing animation
 
-                const message = "Fuck You, Pay Me XRP";
+                const message = "Fuck You, Pay Me XMR";
 
                 let index = 0;
 
@@ -1983,19 +1999,23 @@
 
                                 lookupData.badges.forEach(badge => {
 
-                                    const badgeElement = document.createElement('div');
+                                    if (badge.description !== 'PGP') {
 
-                                    badgeElement.className = 'badge-container';
+                                        const badgeElement = document.createElement('div');
 
-                                    badgeElement.innerHTML = `
+                                        badgeElement.className = 'badge-container';
 
-                                        <img src="${badge.icon}" alt="${badge.description}" class="badge" />
+                                        badgeElement.innerHTML = `
 
-                                    `;
+                                            <img src="${badge.icon}" alt="${badge.description}" class="badge" />
 
-                                    badgeContainer.appendChild(badgeElement);
+                                        `;
 
-                                    console.log(`Added DiscordLookup badge: ${badge.description}`);
+                                        badgeContainer.appendChild(badgeElement);
+
+                                        console.log(`Added DiscordLookup badge: ${badge.description}`);
+
+                                    }
 
                                 });
 
